[package]
name = "toolbelt_a"
version = "0.1.0"
authors = ["arthurDiff <arthur.lee945@gmail.com>"]
description = "Random tools for use"

[lib]

[dependencies]
proc_macro_a = { path = "./proc_macro_a", optional = true }

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

### FEATURES #################################################################

[features]
default = []
### PROC MACRO
proc_macro = ["proc_macro_a/comp"]
comp = ["proc_macro_a/comp"]
### SYNC
sync = []
worker = []
