[package]
name = "toolbelt_a"
version = "0.1.0"
authors = ["arthurDiff <arthur.lee945@gmail.com>"]
description = "Random tools for use"
repository = "https://github.com/arthurDiff/toolbelt_a"
readme = "crates-io.md"
keywords = ["utility"]
categories = ["sync-utilities"]

[lib]

[dependencies]
toolbelt_a_pm = { version = "0.1.0", path = "./toolbelt_a_pm", optional = true }

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

### FEATURES #################################################################

[features]
default = []
### PROC MACRO
proc_macro = ["comp"]
comp = ["toolbelt_a_pm/comp"]
### SYNC
sync = ["worker", "result_worker", "thread_pool"]
worker = []
result_worker = []
thread_pool = []
