[package]
name = "proc_macro_a"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.93", default-features = false, features = [
    "proc-macro",
] }
quote = { version = "1.0.38", default-features = false }
syn = { version = "2.0.96", default-features = false, features = [
    "derive",
    "full",
    "parsing",
    "printing",
    "proc-macro",
] }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[features]
comp = []
